2005-08-18 Pierrick LE GALL

	* bug 133 fixed : "Nb of images incorectly rendered in "tool tip"
	near category in category menu". Correction reported (and
	improved) from branch 1.4

2005-08-18 Pierrick LE GALL

	* improvement : screen admin/picture_modify
	rewritten. Presentation copied from admin/cat_modify : fieldsets
	regroup fields. Ability to synchronize metadata for the displayed
	item.

	* bug 110 fixed : "return to element view from element edition
	fails depending on permissions". If a reachable (for the connected
	admin) category is available, a "jump to" link is displayed, by
	default, using the category given in URL.

	* bug fixed : in mass_updates function, the first item of
	$fields['update'] has not always 0 for id (as in any array).

	* modification : get_keywords function understands spaces as
	separator, allow less than 3 chars keywords, allow quotes.

	* new : ability to allow HTML in picture or category description
	(false by default)

2005-08-17 Pierrick LE GALL

	* improvement : in admin/user_perm, already authorized categories
	thanks to group associations are displayed and not taken into
	account for user specific permissions.

2005-08-17 Pierrick LE GALL

	* modification : major simplification of admin.php. Titles are
	managed by included page, localized items are managed directly in
	the template.

	* new : sub template admin/double_select is included in templates
	admin/cat_options, admin/user_perm and admin/group_perm. I haven't
	been able to use it in admin/picture_modify because it seems
	impossible to have two instance of the same sub-template without
	interfering.

	* modification : bug 99, in profile manager, no auto submit when
	changing language (useless and generate accessibility problem).

	* improvement : HTML semantically correct for administration menu,
	simpler syntax, less tags, correct tags (dl/dt/dd instead of
	div/div).

	* modification : number of waiting elements and unvalidated